# api/openapi.yml
@@ -98,6 +98,11 @@ components:
           description: "パスワード"
           example: "password"
           writeOnly: true
+        confirm_password:
+          type: "string"
+          description: "確認用パスワード"
+          example: "password"
+          writeOnly: true
         created_at:
           $ref: "#/components/schemas/created_at"
         updated_at:
